# rent-vs-own

./: .gitignore  Cargo.toml  LICENSE  README.md  index.css  index.html
.github/workflows/: gh-pages-deploy.yml
src/: main.rs
src/calculate/: consts.rs  mod.rs  owner.rs  rates.rs  saver.rs
src/tests/: mod.rs
workflows/: gh-pages-deploy.yml
