[package]
name = "rent-vs-own"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version="0.5.4" , features=["csr"] }
wasm-bindgen = "=0.2.89"
console_log = "1"
console_error_panic_hook = "0.1.7"
rand = "0.8.5"
plotly = { version = "0.8.4" , features= ["wasm-bindgen", "wasm"] }
serde = { version = "1.0.195", features = ["derive"] }
num-format = "0.4.4"
leptos-use = "0.9.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
wasm-bindgen = "0.2"
web-sys = "0.3"

[build]
target = "x86_64-unkown-linux-gnu"